Add font and style

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,17 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link href="https://fonts.googleapis.com/css?family=Prompt" rel="stylesheet">
+
     <title>ชุมชนหนอนหนังสือ</title>
+
+    <style>
+      html, body {
+        font-family: 'Prompt', sans-serif !important;
+        padding: 0;
+        margin: 0;
+      }
+    </style>
   </head>
   <body>
     <noscript>
