--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,13 @@
         font-family: 'Prompt', sans-serif !important;
         padding: 0;
         margin: 0;
+        width: 100%;
+        height: 100%;
+      }
+
+      #root {
+        width: 100%;
+        height: 100%;
       }
     </style>
   </head>
