--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <link href="https://fonts.googleapis.com/css?family=Prompt" rel="stylesheet">
 
     <title>ชุมชนหนอนหนังสือ</title>
-
+    <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit" async defer></script>
     <style>
       html, body {
         font-family: 'Prompt', sans-serif !important;
